--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
 
 * {
   font-variant-ligatures: none;
+  font-family: 'Assistant', sans-serif;
 }
 
 html {
@@ -65,4 +66,17 @@ model-viewer::part(default-progress-bar) {
   100% {
     background-position: 97% 0%;
   }
+}
+
+.banner-home{
+  background-image: url('/banner-home.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 768px) {
+  
+}
+@media screen and (max-width: 1024px) {
+  
 }
